# iq-neuron

./: .gitignore  CMakeLists.txt  MIGRATION.md  PKGBUILD  README.md  iqif.py  pyproject.toml  runall.sh  theta_plot.py
include/: iq_network.h  iq_neuron.h  iz_network.h  iz_neuron.h  iz_synapse.h  lif_network.h  lif_neuron.h  synapse.h  weight_index_list.h  windex_list.h
inputs/: Connection_Table.txt  Connection_Table_IQIF.txt  Connection_Table_Izhikevich.txt  connection_gen.py  neuronParameter.txt  neuronParameter_IQIF.txt  neuronParameter_IQIF_bistable.txt  neuronParameter_IQIF_burst.txt  neuronParameter_IQIF_class1.txt  neuronParameter_IQIF_integrator.txt  neuronParameter_IQIF_latency.txt  neuronParameter_Izhikevich.txt  neuronParameter_LIF.txt  session.txt  session_bistable.txt  session_bump.txt  session_class1.txt  session_integrator.txt  session_latency.txt  session_spiking.txt  testbench_IQIF.txt
iqif/: __init__.py
rust/: Cargo.toml  PLAN.md  check_gpu_parity.py  pyproject.toml
rust/crates/iqif-core/: Cargo.toml
rust/crates/iqif-core/src/: lib.rs
rust/crates/iqif-gpu/: Cargo.toml
rust/crates/iqif-gpu/examples/: bench.rs
rust/crates/iqif-gpu/src/: gpu_parity_tests.rs  lib.rs  sanity.rs  sanity.wgsl  step.wgsl
rust/crates/iqif-py/: Cargo.toml
rust/crates/iqif-py/src/: lib.rs
rust/crates/iqif-vio/: Cargo.toml
rust/crates/iqif-vio/examples/: euroc_egomotion.rs  euroc_egomotion_derot.rs  euroc_egomotion_imu.rs  euroc_egomotion_imu_live.rs  euroc_egomotion_imu_scn.rs  euroc_egomotion_imu_scn_live.rs  euroc_egomotion_live.rs  euroc_egomotion_scn.rs  euroc_egomotion_scn_live.rs
rust/crates/iqif-vio/src/: lib.rs
rust/src/: lib.rs
src/: iq_network.cpp  iq_neuron.cpp  iq_synapse.cpp  iz_network.cpp  iz_neuron.cpp  iz_synapse.cpp  lif_network.cpp  lif_neuron.cpp  main.cpp  simple_theta.cpp  synapse.cpp  weight_index_list.cpp  windex_list.cpp
tests/: plot_egomotion.py  plot_pc_derot_viz.py  plot_scn_viz.py  test_checkpoint.py  test_current_accumulator.py  test_decay_phase.py  test_pc_8point.py  test_pc_augmented.py  test_pc_egomotion.py  test_pc_egomotion_8bit.py  test_pc_egomotion_closedloop.py  test_pc_egomotion_scn.py  test_pc_egomotion_scn_chip.py  test_pc_egomotion_scn_chip_inhib.py  test_pc_egomotion_scn_int.py  test_pc_egomotion_synaptic_relay.py  test_pc_scn_sequence.py  test_pc_vs_scn_within_frame.py  test_rate_transfer.py  test_rust_parity.py  test_scn_isi.py  test_set_weight.py  test_subthreshold_integrator.py  test_synaptic_decay.py
tutorial/: tutorial.md
utils/: countspike.sh  ffcurve_plot.py  ffcurvegen_8bit.sh  genBench.py  genParameter.py  genTable.py  iq_plot.py  iz_plot.py  run.sh  run_pc_derot_viz.sh  run_responseTime.sh
