[package]
name = "iqif_rs"
version = "0.1.0"
edition = "2021"
description = "Bit-exact Rust port of the IQIF spiking-neuron network (RIIR of iq-neuron)"
license = "MIT"

[lib]
name = "iqif_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
