[package]
name = "iqif-gpu"
version = "0.1.0"
edition = "2021"
description = "wgpu GPU backend for the integer IQIF network (skeleton)"
license = "MIT"

[lib]
name = "iqif_gpu"

# wgpu / pollster / bytemuck arrived in Phase 2 (see rust/PLAN.md) for the
# integer-semantics sanity kernel; they carry forward into the real kernels.
[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
iqif-core = { path = "../iqif-core" }
pollster = "0.4.0"
wgpu = "29.0.3"
